2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c (GNOME_TYPE_TRISTATE): New enum type.
	(PROP_WANT_BROWSE_BUTTON): Use the new tristate enum.
	(PROP_WANT_CLEAR_BUTTON, PROP_WANT_DEFAULT_BUTTON): Likewise.
	(PROP_WANT_ENTRY_WIDGET): New tristate property.
	(PROP_WANT_SELECTOR_WIDGET): New tristate property.
	(PROP_WANT_BROWSE_DIALOG): New tristate property.
	(PROP_WANT_DEFAULT_BEHAVIOUR): Removed.
	(PROP_USE_DEFAULT_ENTRY_WIDGET): Removed.
	(PROP_USE_DEFAULT_SELECTOR_WIDGET): Removed.
	(PROP_USE_DEFAULT_BROWSE_DIALOG): Removed.

Mon May 21 00:43:48 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-entry.[ch]: to be consistent with everything else g*
	  return the item from the _ref function when we do that.  Also
	  update the docs for this of course.

Sun May 20 22:46:20 2001  George Lebl <jirka@5z.com>

	* gnome-config.c: fix get_translated_string wrt defaults, the old
	  implementation just didn't work AT ALL if you passed in a default,
	  this appends the languages to the keys rather then onto the end
	  of the entire path.

2001-05-20  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h
	(gnome_selector_construct): Added `Bonobo_PropertyBag pbag' argument.
	(gnome_selector_get_property_bag): New function.
	(gnome_selector_get_history_id): Removed.
	(gnome_selector_set_history_id): Removed.

	* gnome-selector.c (PROP_HISTORY_ID): Removed this property.
	(PROP_PROPERTY_BAG): New property.

	* gnome-selector-factory.[ch]: New files.

2001-05-16  Mark Murnane  <Mark.Murnane@ireland.sun.com>

	Changes to eliminate any potential problems on 64-bit platforms.
	
	* gnome-config.c (gnome_config_assemble_vector): Modified type
	of len to match return type of strlen().

	* gnome-ditem.c (replace_percentsign): Modified type of start,
	string_len and ps_len as they are used in strlen() operations.
	(strip_the_amp): Ditto for exec_len.
	(stripstreq): Ditto for len2.

	* gnome-exec.c (gnome_execute_async_with_env_fds): Modiifed type